# isoft-os-installer

./: .gitignore  README.md  build.sh
cetcosinstaller/: .directory  README  cetcosinstaller.spec  makedist.sh  makets.sh  projects.pro  projects.pro.user.3.0-pre1
cetcosinstaller/data/: cetcosinstaller.desktop  rflocale.xml
cetcosinstaller/data/svg/: svg.qrc
cetcosinstaller/games/: game.cpp  game.h  game_card.cpp  game_carddata.cpp  game_carddata.h  game_mainwindow.cpp  game_mainwindow.h  game_scene.cpp
cetcosinstaller/src/: archinfo.cpp  dashboard.cpp  dashboard.h  dialog_postscript.cpp  dialog_reject.cpp  dialog_root.cpp  dialog_root.h  dialog_summary.cpp  installer_global.h  main.cpp  parser_comps.cpp  parser_custom.cpp  parser_groups.cpp  parser_groups.h  parser_locale.cpp  parser_locale.h  partition_automode.cpp  partition_automode.h  rfgroups.xml  src.pro  stage_indicator.cpp  stage_indicator.h  wizard_installer.cpp  wizard_installer.h  wizardpage_choosegroup.cpp  wizardpage_choosegroup.h  wizardpage_choosegroup.ui  wizardpage_finish.cpp  wizardpage_finish.h  wizardpage_install_mode.cpp  wizardpage_install_mode.h  wizardpage_install_mode.ui  wizardpage_licence.cpp  wizardpage_licence.h  wizardpage_partition.h  wizardpage_partition_advanced.cpp  wizardpage_partition_advanced.h  wizardpage_partition_auto.cpp  wizardpage_partition_auto.h  wizardpage_partition_mode.cpp  (+11 more)
cetcosinstaller/translations/: installer_en.qm  installer_en.ts  installer_es.qm  installer_es.ts  installer_pt.qm  installer_pt.ts  installer_zh_CN.qm  installer_zh_CN.ts  installer_zh_TW.qm  installer_zh_TW.ts  licence_en.html  licence_zh_CN.html
installer/: ChangeLog  README  makedist.sh  projects.pro  rfinstaller.spec
installer/data/: rfinstaller.desktop
installer/games/: game_card.h  game_carddata.cpp  game_mainwindow.cpp  game_scene.cpp  game_scene.h  games.pro
installer/src/: dialog_postscript.h  dialog_reject.h  dialog_root.cpp  dialog_summary.h  installer_global.h  main.cpp  parser_complete.cpp  parser_complete.h  parser_comps.h  parser_custom.h  parser_locale.h  src.pro  wizard_installer.cpp  wizard_installer.h  wizardpage_choosegroup.cpp  wizardpage_choosegroup.h  wizardpage_error.h  wizardpage_finish.cpp  wizardpage_finish.h  wizardpage_licence.cpp  wizardpage_licence.h  wizardpage_mach_type.cpp  wizardpage_mach_type.h  wizardpage_packages.cpp  wizardpage_packages.h  wizardpage_packages_query.cpp  wizardpage_packages_query.h  wizardpage_partition.h  wizardpage_partition_advanced.cpp  wizardpage_partition_advanced.h  wizardpage_partition_auto.cpp  wizardpage_partition_auto.h  wizardpage_progress.cpp  wizardpage_summary.cpp  wizardpage_useradd.cpp  wizardpage_welcome.cpp
installer/translations/: installer_en.qm  installer_pt.ts  installer_zh_CN.qm  installer_zh_CN.ts  installer_zh_TW.qm  installer_zh_TW.ts  licence_pt.html  licence_zh_TW.html
libdiskswidget/: add.ui  addpartition.cpp  addpartition.h  archinfo.h  directorytree.cpp  directorytree.h  diskswidget.cpp  diskswidget.h  diskswidget.qrc  edit.ui  editpartition.cpp  editpartition.h  itembutton.cpp  itembutton.h  libdiskswidget.pro  libdiskswidget.spec  libdiskswidget_zh_CN.qm  libdiskswidget_zh_CN.ts
libdiskswidget/.pc/libdiskswidget-loongson.patch/: libdiskswidget.pro
libdiskswidget/patches/: libdiskswidget-loongson.patch  series
libinstallerbase/: CMakeLists.txt  libinstallerbase.spec  project.spec  start.sh
libinstallerbase/engine/: CMakeLists.txt  alpminstaller.cpp  alpminstaller.h  gen_grub_conf.cpp  gen_grub_conf.h  installengine.cpp  installengine.h  ipacman.c  ipacman.h  os_identify.cpp  os_identify.h  pkgmeta.cpp  pkgmeta.h  postscript.tmpl  rpminstaller.cpp  rpminstaller.h  test_meta.cpp  yumshell.cpp  yumshell.h
libinstallerbase/libparted++/: CMakeLists.txt  ct  device_unit.cpp  device_unit.h  devices.cpp  devices.h  parted++.h  parted_devices.cpp  parted_devices.h  partition.cpp  partition.h  partlist.cpp  partlist.h  parttable.cpp  parttable.h  testcase001.cpp  testcase002.cpp  testcase003.cpp
libinstallerbase/rfinstaller_console/: CMakeLists.txt  main.cpp
